--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cuuuurzel.risiko_battle_sim"
-    android:versionCode="9"
-    android:versionName="2.1" >
+    android:versionCode="15"
+    android:versionName="2.3" >
 
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="19" />
 
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name" >
+        
+        <!-- ADS -->
+    	<meta-data 
+    	    android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+    	
+        <activity 
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+        
+    	<!-- APP -->
         <activity
             android:name="com.cuuuurzel.risiko_battle_sim.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
